<resources>
    <string name="app_name">Должники</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Отмена</string>
    <string name="title_delete_alert">Подтвердите удаление</string>
    <string name="text_delete_alert">Удалить пользователя и все записи?</string>
    <string name="menu_delete_alert">Удалить пользователя</string>
    <string name="title_change_name_alert">Редактировать имя</string>
    <string name="menu_change_name_alert">Изменить имя</string>
    <string name="empty_error">Поле не может быть пустым!</string>
    <string name="empty_db">Записей пока нет</string>
    <string name="error_db">База данных недоступна</string>
    <string name="default_summa">0</string>
    <string name="date_take_text">Когда взяли</string>
    <string name="date_give_text">Когда отдали</string>
    <string name="date_give_text_1">Когда отдавать</string>
    <string name="empty_name">Поле Имя не может быть пустым!</string>
    <string name="empty_summa">Поле Сумма не может быть пустым!</string>
    <string name="zero_summa">Поле Сумма не может быть равно нулю!</string>
    <string name="unique_name">Такое имя уже существует!</string>
    <string name="text_take">Взяли</string>
    <string name="text_give">Отдавать</string>
    <string name="text_summa">Сколько</string>
    <string name="text_on_switch">Взяли</string>
    <string name="text_off_switch">Отдали</string>
    <string name="name_user_text">Имя</string>
    <string name="new_user_desc">Новая запись</string>
    <string name="menu_view">Переключить вид</string>
    <string name="menu_sort">Сортировка</string>
    <string name="menu_sort_name_asc">По имени (А-Я)</string>
    <string name="menu_sort_name_desc">По имени (Я-А)</string>
    <string name="menu_sort_summa_asc">По сумме (по возрастанию)</string>
    <string name="menu_sort_summa_desc">По сумме (по убыванию)</string>
    <string name="menu_about_app">О приложении</string>
    <string name="red_icon_description">Красная рамка вокруг карточки - сумма, которую должны</string>
    <string name="green_icon_description">Зеленая рамка вокруг карточки - Вам отдали больше, чем взяли</string>
    <string name="blue_icon_description">Синяя рамка вокруг карточки - долга нет</string>
    <string name="about_title">Приложение для ведения должников</string>
    <string name="about_version">Версия 1.0.0.</string>
</resources>