<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/red_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="@drawable/main_card_bg_positive"/>

        <TextView
            android:id="@+id/red_icon_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/red_icon_description"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/green_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="@drawable/main_card_bg_negative"/>

        <TextView
            android:id="@+id/green_icon_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/green_icon_description"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/blue_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="@drawable/main_card_bg"/>

        <TextView
            android:id="@+id/blue_icon_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/blue_icon_description"/>
    </LinearLayout>

    <TextView
        android:id="@+id/about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textStyle="bold"
        android:text="@string/about_version"/>

</LinearLayout>